--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3"
+    "react-hook-form": "^7.51.3",
+    "sass": "^1.75.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
