--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@prisma/client": "5.12.1",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.28",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.51.3",
-    "sass": "^1.75.0"
+    "react-query": "^3.39.3",
+    "sass": "^1.75.0",
+    "unique-username-generator": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
