--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -24,6 +25,8 @@
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "sass": "^1.75.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "unique-username-generator": "^1.3.0"
   },
   "devDependencies": {
