--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "5.12.1",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.28",
+    "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "prisma": "^5.12.1",
@@ -30,6 +31,7 @@
     "unique-username-generator": "^1.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
