--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.5",
     "@prisma/client": "5.12.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.0.28",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
