--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "sass": "^1.75.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "unique-username-generator": "^1.3.0"
+    "unique-username-generator": "^1.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "typescript": "^5.4.5"
