--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "5.12.1",
     "@types/lodash-es": "^4.17.12",
     "axios": "^1.6.8",
+    "cryptr": "^6.3.0",
     "dayjs": "^1.11.12",
     "framer-motion": "^11.0.28",
     "js-cookie": "^3.0.5",
