--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "node server.js"
+    "server": "node --watch server.js",
+    "test": "vitest"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -37,13 +38,18 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.1",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20.12.7",
+    "@types/node": "^22.7.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
-    "typescript": "^5.4.5"
+    "jsdom": "^25.0.1",
+    "typescript": "^5.4.5",
+    "vitest": "^2.1.2",
+    "vitest-mock-extended": "^2.0.2"
   }
 }
